force-app/main/default/objects/FieloPLT__Event__c/FieloPLT__Event__c.object-meta.xml
<CustomObject>
    <description>Activities other than Transactions which can be incentivized and performed by Members.</description>
    <label>Event</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>