force-app/main/default/objects/FieloPLT__Event__c/fields/FieloPLT__EventDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__EventDate__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>