force-app/main/default/objects/FieloPLT__Event__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member who is part of the Event.</description>
    <inlineHelpText>Choose a Member related to the Event.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>