force-app/main/default/objects/FieloPLT__Event__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>Event type: Registration, Login and Redeem.</description>
    <inlineHelpText>Choose the Event type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Redeem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>