force-app/main/default/objects/FieloPLT__Event__c/fields/FieloPLT__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Value__c</fullName>
    <description>Number Value related to an Event (e.g. if the Event is &quot;Redeem&quot;, the Value can be the Redemption value).</description>
    <inlineHelpText>Enter the number Value for this Event.</inlineHelpText>
    <label>Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>